[package]
name = "rand_visualizer"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Paul Bühne <buehne.paul@google.com>"]
homepage = "github.com/Cactus-man/rand_visualizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
human-panic = "*"

console = "*"
dialoguer = "*"
indicatif = "*"
term-table = "*"

easy-parallel = "*"
rand = "*"
counter = "*"
num_cpus = "*"

fraction = "*"
plotters = "*"
xlsxwriter = "*"

anyhow = "*"
